# heapsz

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
heapsz/: Cargo.toml
heapsz-derive/: Cargo.toml  README.md
heapsz-derive/src/: lib.rs
heapsz/examples/: allowlisting.rs  blank.rs  blocklisting.rs  enums.rs  tuples.rs  with.rs
heapsz/src/: examples.rs  lib.rs
heapsz/src/impls/: allocs.rs  bytes.rs  cores.rs  mod.rs  protobuf2.rs  stds.rs
heapsz/tests/: expand.rs  ui.rs
heapsz/tests/expand/: allowlisting.stdout  blank.stdout  blocklisting.stdout  enums.stdout  tuples.stdout  with.stdout
heapsz/tests/ui/: fail-derive-generic.rs  fail-derive-generic.stderr  fail-derive-none-heapsize.rs  fail-derive-none-heapsize.stderr  fail-derive-too-many-attrs-1.rs  fail-derive-too-many-attrs-2.rs  fail-derive-union.rs  fail-derive-unknown-attrs.rs  fail-derive-unknown-attrs.stderr  fail-derive-wrong-attrs-skip.rs  fail-derive-wrong-attrs-with.rs  ok-cfg-feature.rs  ok-derive.rs  ok-doc-comments.rs
heapuse/: Cargo.toml
heapuse-derive/: Cargo.toml
heapuse-example/: Cargo.toml
heapuse-tests/: Cargo.toml
heapuse-tests/tests/: expand.rs  ui.rs
heapuse-tests/tests/expand/: allowlisting.stdout  blank.stdout  blocklisting.stdout  enums.stdout  expand.stdout  with.stdout
heapuse-tests/tests/ui/: fail-derive-generic.rs  fail-derive-generic.stderr  fail-derive-none-heapsize.rs  fail-derive-none-heapsize.stderr  fail-derive-too-many-attrs-1.rs  fail-derive-too-many-attrs-1.stderr  fail-derive-too-many-attrs-2.rs  fail-derive-too-many-attrs-2.stderr  fail-derive-union.rs  fail-derive-union.stderr  fail-derive-unknown-attrs.rs  fail-derive-unknown-attrs.stderr  fail-derive-wrong-attrs-1.rs  fail-derive-wrong-attrs-1.stderr  fail-derive-wrong-attrs-2.rs  fail-derive-wrong-attrs-2.stderr  fail-derive-wrong-attrs-3.rs  fail-derive-wrong-attrs-3.stderr  fail-derive-wrong-attrs-skip.rs  fail-derive-wrong-attrs-skip.stderr  fail-derive-wrong-attrs-with.rs  fail-derive-wrong-attrs-with.stderr  ok-derive.rs
heapuse/src/: lib.rs  (+1 more)
scripts/: generate-docs  generate-fixtures
(+32 files in other folders)
