[package]
name = "heapsz-derive"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Neil Shen <overvenus@gmail.com>"]
repository = "https://github.com/overvenus/heapsz"
description = "Procedural macros for `heapsz`"
documentation = "https://docs.rs/heapsz"

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
